# SAM-E

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.invoker  Dockerfile.release  README.md  build_cli.sh  docker-compose.yaml  dockerfile  flake.nix  run.sh  start.sh  template.yaml  test-config.yaml  test.sh  test_invoker.sh  test_invoker_config.yaml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 0xlr0bywx4i7q7wws9ag8xfg35nga78f-source  818hgwlhx8ygjilaj89za2nyfff6d8aj-source  as3vyrl02np96zn798yphyq7nccj30dx-source  gkvc3slgqcx5n33nxfg989p5ix9j135j-source  m9s94alic7s2r6v47p7lwfj58ibc076a-source  p6vrdm37qpaqn579sxn59l4b5f1578k2-source  r0jmany1mnc3xxdrzb6xgf5jcbp1s2bw-source
examples/basic_api/: template.yaml
examples/basic_api/temp/: docker-compose_temp.yaml
examples/basic_api/test-axum/: Cargo.toml  Dockerfile
examples/basic_api/test-axum/src/: main.rs
examples/basic_api/test-containers/: docker-compose.yaml
examples/basic_api/test-containers/test-axum/: Cargo.toml
examples/basic_api/test-containers/test-axum/src/: main.rs
examples/basic_api/test-containers/test-basic-rust/: Cargo.toml
examples/basic_api/test-containers/test-basic-rust/src/: main.rs
examples/basic_api/test-containers/test-s3-upload/: Cargo.toml
examples/basic_api/test-containers/test-s3-upload/src/: main.rs
examples/basic_s3/: template.yaml
examples/basic_sqs/: template.yaml
examples/basic_sqs/test-sqs-handler/: Cargo.toml
examples/basic_sqs/test-sqs-handler/src/: msg_handler.rs
examples/basic_sqs/test-sqs-handler/src/msg_handler/: handlers.rs
examples/basic_sqs/test-sqs-trigger/: Cargo.toml  Dockerfile
examples/basic_sqs/test-sqs-trigger/src/: main.rs
examples/eventbridge/: template.yaml
examples/eventbridge/test-eventbridge-trigger/: Cargo.toml
examples/eventbridge/test-eventbridge-trigger/src/: main.rs
examples/eventbridge/test-sqs-handler/: Cargo.toml
examples/eventbridge/test-sqs-handler/src/: main.rs  msg_handler.rs
examples/eventbridge/test-sqs-handler/src/msg_handler/: handlers.rs
minio-container/: Dockerfile
sam-e-cli/: Cargo.toml  README.md
sam-e-cli/assets/templates/: docker-compose.dev.yaml  docker-compose.yaml  function-docker-compose.yaml  infra-docker-compose.yaml
sam-e-cli/assets/templates/local-queue/: custom.conf
sam-e-cli/assets/templates/local-s3/: Dockerfile  entrypoint.sh
sam-e-cli/src/: data.rs  main.rs  scripts.rs
sam-e-cli/src/data/: cli.rs  docker.rs
sam-e-cli/src/scripts/: build.rs  deploy.rs  environment.rs  frontend.rs  function.rs  init.rs  mapping.rs  rebuild.rs  start.rs  stop.rs  template.rs  utils.rs
sam-e-cli/src/scripts/environment/: build.rs  deploy.rs  init.rs  rebuild.rs  start.rs
sam-e-cli/src/scripts/frontend/: add.rs  remove.rs  start.rs  stop.rs
sam-e-cli/src/scripts/function/: add.rs  build.rs  group.rs
sam-e-cli/src/scripts/function/group/: add.rs  create.rs
sam-e-cli/src/scripts/template/: add.rs  update.rs  utils.rs  validate.rs
sam-e-common/: Cargo.toml
sam-e-invoker/: Cargo.toml
sam-e-invoker-new/src/: invocation.rs  main.rs  middleware.rs
sam-e-invoker-new/src/data/: api.rs
sam-e-invoker-new/src/invocation/: invoke.rs
sam-e-invoker/src/: handlers.rs  invocation.rs  main.rs
sam-e-invoker/src/data/: api.rs  store.rs
sam-e-invoker/src/handlers/: client.rs  invocation.rs
sam-e-invoker/src/handlers/client/: queues.rs  request.rs  utils.rs
sam-e-invoker/src/handlers/invocation/: invocation_error.rs  next.rs  response.rs
sam-e-invoker/src/handlers/webhook/: s3.rs
sam-e-invoker/src/invocation/: init_error.rs  next.rs  response.rs  utils.rs
sam-e-types/: Cargo.toml
sam-e-types/src/: cloudformation.rs  config.rs  invocation.rs  lib.rs
sam-e-types/src/cloudformation/: parameter.rs  resource.rs  template.rs
sam-e-types/src/cloudformation/resource/: apigw.rs  base_path_mapping.rs  bucket.rs  db_instance.rs  event.rs  event_bus.rs  event_rule.rs  function.rs  queue.rs  resource.rs
sam-e-types/src/cloudformation/resource/function/: event.rs
sam-e-types/src/config/: config.rs  frontend.rs  infrastructure.rs  lambda.rs  runtime.rs
sam-e-types/src/config/infrastructure/: event_bus.rs  event_rule.rs  mysql.rs  postgres.rs  s3.rs  sqs.rs  triggers.rs
sam-e-types/src/config/lambda/: docker.rs  event.rs
sam-e-types/src/config/runtime/: template.rs
sources/sam-e-source-apigw/: Cargo.toml
sources/sam-e-source-apigw/src/: data.rs  main.rs  middleware.rs  request.rs  response.rs  utils.rs
sources/sam-e-source-eventbridge/: Cargo.toml
sources/sam-e-source-eventbridge/src/: data.rs  main.rs  middleware.rs  request.rs
sources/sam-e-source-eventbridge/src/data/: store.rs
sources/sam-e-source-eventbridge/src/request/: put_events.rs
sources/sam-e-source-s3/: Cargo.toml
sources/sam-e-source-s3/src/: data.rs  main.rs  webhook.rs
sources/sam-e-source-sqs/: Cargo.toml
sources/sam-e-source-sqs/src/: data.rs  main.rs  queues.rs
src/: data.rs  handlers.rs  main.rs  middleware.rs
src/data/: api.rs  sam.rs  store.rs
src/data/sam/: sam.rs  utils.rs
src/handlers/: invocation.rs
src/handlers/client/: request.rs  utils.rs
src/handlers/invocation/: next.rs  response.rs  utils.rs
test-axum/: Dockerfile
test-basic-rust/: Cargo.toml
test-basic-rust/src/: main.rs
test-containers/test-axum/: Dockerfile
test-lambda-node/: Dockerfile  app.js  package.json
