[package]
name = "local-aws"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1.0.79"
aws_lambda_events = "0.13.0"
axum = { version = "0.7.4", features = ["macros"] }
chrono = { version = "0.4.32", features = ["serde"] }
fancy-regex = "0.13.0"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.30"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt", "env-filter"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }

[[bin]]
name = "app"
path = "src/main.rs"

