[package]
name = "sam-e-cli"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.32", features = ["serde"] }
clap = { version = "4.4.8", features = ["derive"] }
dialoguer = "0.11.0"
rust-embed = { version = "8.2.0", features = [ "include-exclude" ] }
serde = "1.0"
serde_yaml = "0.9.30"
tera = "1.19.1"
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt", "env-filter"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }

# in-house crates
sam-e-types = { path = "../sam-e-types" }

# [[bin]]
# name = "app"
# path = "src/main.rs"

