[package]
name = "sam-e-types"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
aws_lambda_events = "0.13.0"
chrono = { version = "0.4.32", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.30"
fancy-regex = "0.13.0"
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
