[package]
name = "sam-e-source-sqs"
version = "0.1.0"
description = "Polls the SQS queue(s) and invokes Lambdas using the custom SAM-E invoker"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws_lambda_events = "0.16.0"
aws-sdk-sqs = "1.50.0"
reqwest = { version = "0.12.9", features = ["rustls-tls", "json"], default-features = false }
chrono = { version = "0.4.39", features = ["serde"] }
serde = "1.0.216"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["ansi", "fmt", "env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

sam-e-types = { path = "../../sam-e-types" }
