[package]
name = "test-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
lambda_http = "0.9.1"
lambda_runtime = "0.9.1"
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }

[[bin]]
name = "app"
path = "src/main.rs"
