[package]
name = "test-s3-upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.5", features = ["behavior-version-latest"] }
aws_lambda_events = "0.13.0"
aws-sdk-s3 = "1.13.0"
lambda_http = "0.9.1"
lambda_runtime = "0.9.1"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt", "env-filter"] }

[[bin]]
name = "app"
path = "src/main.rs"
